// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth search form Form should render correctly with a user 1`] = `
<div
  className="sc-iBPRYJ fxpbUf"
>
  <div
    className="sc-fubCfw hUUoLR"
  >
    <form
      onSubmit={[Function]}
    >
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="user"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          Username or email address
        </span>
        <input
          className="sc-eCssSg gpFOfw"
          defaultValue="someuser"
          id="user"
          name="user"
          onChange={[Function]}
          type="text"
        />
      </label>
      <button
        className="sc-jSgupP uAGCs"
        disabled={false}
        id="search-button"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
</div>
`;

exports[`Auth search form Form should render correctly with no user 1`] = `
<div
  className="sc-iBPRYJ fxpbUf"
>
  <div
    className="sc-fubCfw hUUoLR"
  >
    <form
      onSubmit={[Function]}
    >
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="user"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          Username or email address
        </span>
        <input
          className="sc-eCssSg gpFOfw"
          defaultValue=""
          id="user"
          name="user"
          onChange={[Function]}
          type="text"
        />
      </label>
      <button
        className="sc-jSgupP uAGCs"
        disabled={false}
        id="search-button"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
</div>
`;
